Addded Frost Preset to translations Added Icons for Shedding, Safety, Manual and Frost Presets

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -542,7 +542,8 @@
             "state": {
               "power": "Délestage",
               "security": "Sécurité",
-              "none": "Manuel"
+              "none": "Manuel",
+              "frost": "Gel"
             }
           }
         }
