Fixed French Translation

--- a/custom_components/versatile_thermostat/translations/fr.json
+++ b/custom_components/versatile_thermostat/translations/fr.json
@@ -543,7 +543,7 @@
               "power": "Délestage",
               "security": "Sécurité",
               "none": "Manuel",
-              "frost": "Gel"
+              "frost": "Hors Gel"
             }
           }
         }
