Removed all references to individual entities in strings/en.json

--- a/custom_components/versatile_thermostat/translations/en.json
+++ b/custom_components/versatile_thermostat/translations/en.json
@@ -82,21 +82,10 @@
           "auto_fan_mode": "Auto fan mode"
         },
         "data_description": {
-          "heater_entity_id": "Mandatory heater entity id",
-          "heater_entity2_id": "Optional 2nd Heater entity id. Leave empty if not required",
-          "heater_entity3_id": "Optional 3rd Heater entity id. Leave empty if not required",
-          "heater_entity4_id": "Optional 4th Heater entity id. Leave empty if not required",
+          "underlying_entity_ids": "The device(s) to be controlled - 1 is required",
           "heater_keep_alive": "Optional heater switch state refresh interval. Leave empty if not required.",
           "proportional_function": "Algorithm to use (TPI is the only one for now)",
-          "climate_entity_id": "Underlying climate entity id",
-          "climate_entity2_id": "2nd underlying climate entity id",
-          "climate_entity3_id": "3rd underlying climate entity id",
-          "climate_entity4_id": "4th underlying climate entity id",
           "ac_mode": "Use the Air Conditioning (AC) mode",
-          "valve_entity_id": "1st valve number entity id",
-          "valve_entity2_id": "2nd valve number entity id",
-          "valve_entity3_id": "3rd valve number entity id",
-          "valve_entity4_id": "4th valve number entity id",
           "auto_regulation_mode": "Auto adjustment of the target temperature",
           "auto_regulation_dtemp": "The threshold in ° (or % for valve) under which the temperature change will not be sent",
           "auto_regulation_periode_min": "Duration in minutes between two regulation update",
@@ -294,21 +283,10 @@
         "title": "Entities - {name}",
         "description": "Linked entities attributes",
         "data": {
-          "heater_entity_id": "1st heater switch",
-          "heater_entity2_id": "2nd heater switch",
-          "heater_entity3_id": "3rd heater switch",
-          "heater_entity4_id": "4th heater switch",
+          "underlying_entity_ids": "The device(s) to be controlled",
           "heater_keep_alive": "Switch keep-alive interval in seconds",
           "proportional_function": "Algorithm",
-          "climate_entity_id": "1st underlying climate",
-          "climate_entity2_id": "2nd underlying climate",
-          "climate_entity3_id": "3rd underlying climate",
-          "climate_entity4_id": "4th underlying climate",
           "ac_mode": "AC mode",
-          "valve_entity_id": "1st valve number",
-          "valve_entity2_id": "2nd valve number",
-          "valve_entity3_id": "3rd valve number",
-          "valve_entity4_id": "4th valve number",
           "auto_regulation_mode": "Self-regulation",
           "auto_regulation_dtemp": "Regulation threshold",
           "auto_regulation_periode_min": "Regulation minimum period",
@@ -317,21 +295,10 @@
           "auto_fan_mode": "Auto fan mode"
         },
         "data_description": {
-          "heater_entity_id": "Mandatory heater entity id",
-          "heater_entity2_id": "Optional 2nd Heater entity id. Leave empty if not used",
-          "heater_entity3_id": "Optional 3rd Heater entity id. Leave empty if not used",
-          "heater_entity4_id": "Optional 4th Heater entity id. Leave empty if not used",
+          "underlying_entity_ids": "The device(s) to be controlled - 1 is required",
           "heater_keep_alive": "Optional heater switch state refresh interval. Leave empty if not required.",
           "proportional_function": "Algorithm to use (TPI is the only one for now)",
-          "climate_entity_id": "Underlying climate entity id",
-          "climate_entity2_id": "2nd underlying climate entity id",
-          "climate_entity3_id": "3rd underlying climate entity id",
-          "climate_entity4_id": "4th underlying climate entity id",
           "ac_mode": "Use the Air Conditioning (AC) mode",
-          "valve_entity_id": "1st valve number entity id",
-          "valve_entity2_id": "2nd valve number entity id",
-          "valve_entity3_id": "3rd valve number entity id",
-          "valve_entity4_id": "4th valve number entity id",
           "auto_regulation_mode": "Auto adjustment of the target temperature",
           "auto_regulation_dtemp": "The threshold in ° (or % for valve) under which the temperature change will not be sent",
           "auto_regulation_periode_min": "Duration in minutes between two regulation update",
